--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -27,3 +27,25 @@ h1 {
     text-align: left;
 }
 
+.contact {
+  margin-top: 50px;
+}
+
+.name-input {
+  width: 40%;
+  margin-left: 30px;
+}
+
+.email-input {
+  width: 40%;
+  margin-left: 30px;
+}
+
+.message-input {
+  width: 70%;
+  margin-left: 30px;
+}
+
+.submit {
+  margin-left: 30px;
+}
