--- a/src/App.css
+++ b/src/App.css
@@ -54,23 +54,44 @@ h1 {
   margin-top: 50px;
 }
 
-.name-input {
-  width: 40%;
-  margin-left: 40px;
+#contact-form {
+  margin-left: 100px;
+  margin-top: 3rem;
 }
 
-.email-input {
-  width: 40%;
-  margin-left: 40px;
+#form-name {
+  width: 30%;
+  border: .5px solid gray;
+  border-radius: .5rem;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#form-email {
+  width: 30%;
+  border: .5px solid gray;
+  border-radius: .5rem;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#form-message {
+  width: 50%;
+  height: 15rem;
+  border: .5px solid gray;
+  border-radius: .5rem;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.message-input {
-  width: 70%;
-  margin-left: 40px;
+#form-button {
+  width: 10rem;
+  border-radius: .5rem;
 }
 
-.submit {
-  margin-left: 40px;
+#form-button:hover {
+  background-color: lightblue;
 }
 
 .projects {
