--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,22 @@
 /* Import google fonts */
 @import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
-
+@import url("https://fonts.googleapis.com/css?family=Play|Spinnaker&display=swap");
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
+  /* background-color: rgba(228, 227, 227, 0.822); */
+}
+
+h1, h2, h3, h3, h5, h6 {
+  font-family: 'Spinnaker', sans-serif;
 }
 
 
 .jumbotron {
-  background-image: url('../src/logo5.png');
+  background-image: url("./assets/images/logo5.png");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100vh;
-}
-
-.skills {
-  margin-right: 70px;
-  margin-left: 70px;
-  margin-top: 100px;
+  height: 100vh !important;
 }
 
 .card-title {
@@ -25,29 +24,64 @@ body {
 }
 
 .card-text {
-  padding-top: 15px;
+  padding-top: 1rem;
 }
 
 h1 {
   text-align: center;
-  margin-top: 30px;
+  margin: 2rem;
 }
 
-.pages {
-  text-align: center;
-  margin-top: 20px;
-}
+
 .avatar {
-  margin-top: 25px;
-    float: left;
-    padding: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
-.bio {
-  margin-top: 45px;
-    padding: 35px;
-    margin-right: 20px;
-    text-align: left;
+.links {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.linked {
+  background-color: transparent !important;
+  border: 0rem transparent solid !important;
+  color: #2867B2 !important;
+  font-size: 2rem;
+}
+
+.gh {
+  background-color: transparent !important;
+  border: 0rem transparent solid !important;
+  color: black !important;
+  font-size: 2rem;
+}
+
+.insta {
+  background-color: transparent !important;
+  border: 0rem transparent solid !important;
+  color: #e33f5f !important;
+  font-size: 2rem;
+}
+
+button {
+  margin: 1rem;
+}
+
+#p-about {
+  padding: 2rem;
+}
+
+.languages {
+  width: 100%;
+  margin-top: 0.5rem;
+  text-align: center;
 }
 
 .contact {
@@ -55,55 +89,85 @@ h1 {
 }
 
 #contact-form {
-  margin-left: 100px;
-  margin-top: 3rem;
+  margin: 2rem;
 }
 
 #form-name {
-  width: 30%;
-  border: .5px solid gray;
-  border-radius: .5rem;
-  padding: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  width: 100%;
+  border: 0.1rem solid gray;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.7rem;
 }
 #form-email {
-  width: 30%;
-  border: .5px solid gray;
-  border-radius: .5rem;
-  padding: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  width: 100%;
+  border: 0.1rem solid gray;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.7rem;
 }
 #form-message {
-  width: 50%;
+  width: 100%;
   height: 15rem;
-  border: .5px solid gray;
-  border-radius: .5rem;
-  padding: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border: 0.1rem solid gray;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.7rem;
 }
 
 #form-button {
+  margin-top: 1rem;
   width: 10rem;
-  border-radius: .5rem;
+  border: 0.1rem solid gray;
+  border-radius: 0.5rem;
 }
 
 #form-button:hover {
   background-color: lightblue;
+  border: none;
+}
+
+#note {
+  margin-top: 5rem;
 }
 
 .projects {
-  margin-left: 40px;
-  margin-right: 40px;
+ margin: 2.3rem;
 }
 
 .card-deck {
-  padding-top: 20px;
-  margin-bottom: 10px;
+  padding-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .card-footer {
   text-align: center;
+}
+
+footer {
+  border-radius: 0 !important;
+  border-bottom: 0;
+  background-color: #F8F8F8;
+  margin: 10rem 0 0;
+  height: 5rem;
+}
+
+/* begin media queries */
+@media only screen and (min-width: 320px) {
+  .jumbotron {
+    height: 55vh;
+    background-size: cover;
+  }
+}
+
+@media only screen and (min-width: 801px) and (min-width: 1025px) and (min-width: 1281px) {
+  #form-name {
+    width: 25rem;
+  }
+  #form-email {
+    width: 25rem;
+  }
 }
